--- a/config/secrets.yml.example
+++ b/config/secrets.yml.example
@@ -47,6 +47,12 @@ staging:
   http_basic_password: ""
   managers_url: ""
   managers_application_key: ""
+  backup_name: ""
+  mega_username: ""
+  mega_password: ""
+  synology_host: ""
+  synology_username: ""
+  synology_password: ""
   <<: *maps
   <<: *apis
 
@@ -78,6 +84,12 @@ preproduction:
   facebook_secret: ""
   google_oauth2_key: ""
   google_oauth2_secret: ""
+  backup_name: ""
+  mega_username: ""
+  mega_password: ""
+  synology_host: ""
+  synology_username: ""
+  synology_password: ""
   <<: *maps
   <<: *apis
 
@@ -111,5 +123,11 @@ production:
   wordpress_oauth2_key: ""
   wordpress_oauth2_secret: ""
   wordpress_oauth2_site: ""
+  backup_name: ""
+  mega_username: ""
+  mega_password: ""
+  synology_host: ""
+  synology_username: ""
+  synology_password: ""
   <<: *maps
   <<: *apis
